src/objects/TTS_Access__c.object
<CustomObject>
    <description>access control to type and sub type from profile and role</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Field for notes/comments regarding configuration records.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Except_To_Profiles__c</fullName>
        <label>Except To Profiles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACET EB Agent</fullName>
                </value>
                <value>
                    <fullName>ACET Member</fullName>
                </value>
                <value>
                    <fullName>ACET Provider</fullName>
                </value>
                <value>
                    <fullName>ECM Back Office Agent</fullName>
                </value>
                <value>
                    <fullName>Family Engagement Center</fullName>
                </value>
                <value>
                    <fullName>Family Engagement Center - Read Only</fullName>
                </value>
                <value>
                    <fullName>Provider Claims</fullName>
                </value>
                <value>
                    <fullName>Provider Issue Resolution</fullName>
                </value>
                <value>
                    <fullName>Research User</fullName>
                </value>
                <value>
                    <fullName>SNI_ECM_Back_Office_Agent</fullName>
                </value>
                <value>
                    <fullName>SNI_Member</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Except_To_Roles__c</fullName>
        <label>Except To Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Payable - Agent</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable - Supervisor</fullName>
                </value>
                <value>
                    <fullName>ACET Front Office</fullName>
                </value>
                <value>
                    <fullName>Asian Initiatives B&amp;E Call Center - Agent</fullName>
                </value>
                <value>
                    <fullName>Asian Initiatives B&amp;E Call Center - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Asian Initiatives Member - Agent</fullName>
                </value>
                <value>
                    <fullName>Asian Initiatives Member - Supervisor</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center/CST - Manager</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center/CST - Site Director</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center - Agent</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center - Customer Support Team</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Agent</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate Customer Support Team - Agent</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate Customer Support Team - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Manager</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Site Director</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Supervisor</fullName>
                </value>
                <value>
                    <fullName>BES Senior Resolution Specialist</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>CART</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments</fullName>
                </value>
                <value>
                    <fullName>Complex Medical Claims - Agent</fullName>
                </value>
                <value>
                    <fullName>Complex Medical Claims - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Configuration - Agent</fullName>
                </value>
                <value>
                    <fullName>Configuration - Supervisor</fullName>
                </value>
                <value>
                    <fullName>CPM - Agent</fullName>
                </value>
                <value>
                    <fullName>CPM - Supervisor</fullName>
                </value>
                <value>
                    <fullName>CST Agent - EB/Email Team</fullName>
                </value>
                <value>
                    <fullName>DCSM/DGSA - Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit_To_Profiles__c</fullName>
        <label>Limit To Profiles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACET EB Agent</fullName>
                </value>
                <value>
                    <fullName>ACET Member</fullName>
                </value>
                <value>
                    <fullName>ACET Motion</fullName>
                </value>
                <value>
                    <fullName>ACET Provider</fullName>
                </value>
                <value>
                    <fullName>ECM Back Office Agent</fullName>
                </value>
                <value>
                    <fullName>Center for Health Navigation</fullName>
                </value>
                <value>
                    <fullName>Family Engagement Center - Read Only</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>OF CSR</fullName>
                </value>
                <value>
                    <fullName>Provider Claims</fullName>
                </value>
                <value>
                    <fullName>Provider Issue Resolution</fullName>
                </value>
                <value>
                    <fullName>Provider Service</fullName>
                </value>
                <value>
                    <fullName>Research User</fullName>
                </value>
                <value>
                    <fullName>SNI_ECM_Back_Office_Agent</fullName>
                </value>
                <value>
                    <fullName>SNI Member</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit_To_Roles__c</fullName>
        <label>Limit To Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSR Agent</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable - Agent</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable - Supervisor</fullName>
                </value>
                <value>
                    <fullName>ACET Front Office</fullName>
                </value>
                <value>
                    <fullName>Asian Initiatives B&amp;E Call Center - Agent</fullName>
                </value>
                <value>
                    <fullName>Asian Initiatives B&amp;E Call Center - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Asian Initiatives Member - Agent</fullName>
                </value>
                <value>
                    <fullName>Asian Initiatives Member - Supervisor</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center/CST - Manager</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center/CST - Site Director</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center - Agent</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center - Customer Support Team</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Agent</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate Customer Support Team - Agent</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate Customer Support Team - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Manager</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Site Director</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Supervisor</fullName>
                </value>
                <value>
                    <fullName>BES Senior Resolution Specialist</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>CART</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments</fullName>
                </value>
                <value>
                    <fullName>Clinical - Agent</fullName>
                </value>
                <value>
                    <fullName>Clinical - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Complex Medical Claims - Agent</fullName>
                </value>
                <value>
                    <fullName>Complex Medical Claims - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Configuration - Agent</fullName>
                </value>
                <value>
                    <fullName>Configuration - Supervisor</fullName>
                </value>
                <value>
                    <fullName>CPM - Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <inlineHelpText>Leave blank if value access is controlled by the Type value</inlineHelpText>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TTSAccessExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>TTSAccessExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <label>TTS Access</label>
    <listViews>
        <fullName>All</fullName>
        <columns>TTSAccessExternalID__c</columns>
        <columns>NAME</columns>
        <columns>Topic__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Limit_To_Profiles__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Except_To_Roles__c</columns>
        <columns>Limit_To_Roles__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TTSA-{000000000}</displayFormat>
        <label>TTSA #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TTS Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>